suites/01-kubernetes/template/daemonset.yaml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: DaemonSet
metadata:
  name: daemonset-test
  labels:
    k8s-app: daemonset-test
spec:
  selector:
    matchLabels:
      name: daemonset-test
  template:
    metadata:
      labels:
        name: daemonset-test
    spec:
      containers:
      - name: daemonset-test
        image: nginx:1.14.2-alpine
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 200Mi
