suites/01-kubernetes/template/statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-sts
  labels:
    app: test-sts
spec:
  ports:
  - port: 80
    name: test-sts
  clusterIP: None
  selector:
    app: test-sts
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: StatefulSet
metadata:
  name: test-sts
spec:
  serviceName: test-sts
  replicas: 3
  selector:
    matchLabels:
      app: test-sts
  template:
    metadata:
      labels:
        app: test-sts
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2-alpine
        ports:
        - containerPort: 80
          name: test-sts
